[package]
name = "jacc"
version = "0.1.0"
edition = "2021"
authors = ["funnyboy_roks <funnyboyroks@gmail.com>"]
description = "Just another cli calculator: A maths interpreter for the command-line"
homepage = "https://github.com/funnyboy-roks/jacc"
repository = "https://github.com/funnyboy-roks/jacc"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
